--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port= 8091
+
+# Database
+spring.datasource.url=jdbc:mysql://localhost:3306/postdb
+spring.datasource.username=root
+spring.datasource.password=
+
 
